# CorpusNote

./: .gitignore  README.md  components.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: page.tsx
backend/: index.js
backend/api/: TauriStoreAdapter.ts  schema.ts
backend/domain/db/: db.ts  schema.ts
backend/domain/index/: IndexingPipeline.ts  chunking.ts  run-workflow.ts
backend/domain/infrastructure/: OllamaClient.ts
backend/domain/llm/: ModelClient.ts  embedding.ts  huggingfaceembed.ts
backend/domain/settings/: SettingsRepository.ts  migrate.ts  schema.ts
frontend/: globals.css  package-lock.json  package.json
frontend/.next/: build-manifest.json  fallback-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/pages/: _app.js  _document.js  _error.js
frontend/.next/static/chunks/: 61dca_@swc_helpers_cjs_e27e0aca._.js.map  (+22 more)
frontend/components/ui/: ButtonIcon.tsx
frontend/lib/: utils.ts
frontend/shadcn/ui/: FloatingCommand.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  resizable.tsx
frontend/src/caches/: FileSystemCache.tsx
frontend/src/contexts/: AIContext.tsx  AppContext.tsx  DialogContext.tsx  EditorContext.tsx  FileCache.tsx  FileSystemContext.tsx  ThemeContext.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  main.rs
(+79 files in other folders)
