[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [ "shell-open", "fs-exists", "path-all", "fs-remove-file", "fs-rename-file", "fs-create-dir", "dialog-open", "fs-read-dir", "fs-read-file", "fs-write-file"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
lancedb       = "0.21.3"
tokio         = { version = "1", features = ["full"] }
anyhow        = "1"

arrow         = "=55.2.0"
arrow-array   = "=55.2.0"
arrow-data    = "=55.2.0"
arrow-schema  = "=55.2.0"
arrow-ord     = "=55.2.0"
arrow-cast    = "=55.2.0"
arrow-ipc     = "=55.2.0"
futures       = "0.3"
lance-index = "0.33.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
